...
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_20"
        android:id="@+id/search_bar"
        android:padding="@dimen/size_2"
        android:layout_marginTop="@dimen/size_2"
        android:gravity="center"
        android:background="@drawable/rating_border"
        android:layout_marginStart="@dimen/size_5"
        android:layout_marginEnd="@dimen/size_5"
        >

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:id="@+id/query"
            android:padding="@dimen/size_2"
            android:hint="@string/city_hint"
            android:maxLines="1"
            android:inputType="text"
            android:imeOptions="actionSearch"
            android:drawableStart="@drawable/ic_location"
...
